# task_allocation

centralised_auction/: CMakeLists.txt  package.xml
centralised_auction/include/centralised_auction/: sequential_auction.h
centralised_auction/src/: sequential_auction.cpp
task_msgs/: CMakeLists.txt  package.xml
