<?xml version="1.0"?>
<?xml-model
  href="http://download.ros.org/schema/package_format3.xsd"
  schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>centralised_auction</name>
  <version>0.0.0</version>
  <description>The centralised_auction package</description>
  <maintainer email="nick@todo.todo">nick</maintainer>
  <license>TODO</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>geometry_msgs</depend>
  <depend>rclcpp</depend>
  <depend>rcpputils</depend>
  <depend>task_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
